--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,12 @@ dependencies:
   mobx: ^2.2.1
   flutter_mobx: ^2.1.0+1
 
+  # Audio player
+  audio_video_progress_bar: ^2.0.1
+  just_audio: ^0.9.35
+  just_audio_background: ^0.0.1-beta.10
+  rxdart: ^0.27.7
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
