--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   just_audio: ^0.9.35
   just_audio_background: ^0.0.1-beta.10
   rxdart: ^0.27.7
+  headset_connection_event: ^3.1.0
 
   # Hive
   hive: ^2.2.3
