--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   just_audio_background: ^0.0.1-beta.10
   rxdart: ^0.27.7
   headset_connection_event: ^3.1.0
+  audio_session: ^0.1.16
 
   # Hive
   hive: ^2.2.3
